--- a/sampleIOCApp/Db/Makefile
+++ b/sampleIOCApp/Db/Makefile
@@ -10,7 +10,7 @@ include $(TOP)/configure/CONFIG
 #----------------------------------------------------
 # Create and install (or just install) into <top>/db
 # databases, templates, substitutions like this
-DB += general.db
+# DB += general.db
 
 #----------------------------------------------------
 # If <anyname>.db template is not named <anyname>*.template add
