--- a/.github/workflows/ci-scripts-build.yml
+++ b/.github/workflows/ci-scripts-build.yml
@@ -164,3 +164,5 @@ jobs:
           path: "**/O.*/*.tap"
       - name: Collect and show test results
         run: python .ci/cue.py test-results
+      - name: Check db and dbd syntax
+        run: python validateDBDir.py db/ dbd/sampleIOC.dbd
