add test files to check db syntax

--- a/.github/workflows/ci-scripts-build.yml
+++ b/.github/workflows/ci-scripts-build.yml
@@ -164,3 +164,7 @@ jobs:
           path: "**/O.*/*.tap"
       - name: Collect and show test results
         run: python .ci/cue.py test-results
+      - name: Pytest db and dbd syntax
+        run:  |
+          cd tests
+          pytest test_ioc_record.py
